tests/neg-custom-args/fatal-warnings/i11963c.scala
object Test {
  def foo: Any = {
    open class Bar // error
    new Bar
  }
}
